base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-ns
  labels:
    istio.io/dataplane-mode: ambient
