base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-ngnix-active
  namespace: myapp-ns
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-ngnix-preview
  namespace: myapp-ns
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
