base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-httproute
  namespace: myapp-ns
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  hostnames:
    - myapp.example.com
  parentRefs:
    - name: my-gateway
      namespace: myapp-ns
  rules:
    - backendRefs:
        - name: rollout-ngnix-active
          port: 80
          weight: 100
        - name: rollout-ngnix-preview
          port: 80
          weight: 0
